<resources>
    <string name="app_name">MobileProjectApp2</string>
    <string name="xem_them"></string>
    <string name="thu_gon">Thu gọn</string>
    <string name="test_mo_ta">Chính chủ cho thuê phòng dịch vụ đường Hoàng Hoa Thám kv Bình Thạnh.
Giá 3,5tr - 5tr
Tiện nghi: Có máy giặt, máy lạnh, máy nước nóng lạnh, tủ, bếp từ, giường niệm, bàn ghế làm việc, tủ lạnh, bồn tắm rất sạch sẽ. Phòng có cửa sổ rất thoáng mát.
Thuận tiện: gần hàng xanh, trường đại học Hurtech, Hồng Bàng, bv Ung Bướu, gia định.. xung quanh có nhiều quán cf, quán ăn, Trung tâm thể dục, công viên, cty.... Đi ra Quận 1, gò Vấp, Phú Nhuận chỉ 5 phút. Hình thật.</string>
    <string name="test_dia_chi">188/1 Nguyễn Văn Hưởng , Phường Thảo Điền, Quận 2, Hồ Chí Minh</string>
    <string name="xttt">Xác thực thông tin</string>
    <string name="mtcccd">Mặt trước CCCD</string>
    <string name="mscccd">Mặt sau CCCD</string>
    <string name="cxt">Chưa xác thực</string>
    <string name="dxt">Đã xác thực</string>
    <string name="dcxt">Đang chờ xác thực</string>
    <string name="dmk">Đổi mật khẩu</string>
    <string name="mkht">Mật khẩu hiện tại</string>
    <string name="mkm">Mật khẩu mới</string>
    <string name="nlmk">Nhập lại mật khẩu mới</string>
    <string name="cntt">Cập nhật thông tin</string>
    <string name="gycxt">Gửi yêu cầu xác thực</string>
    <string name="huy">Hủy</string>
    <string name="stt">Sửa thông tin</string>
    <string name="ful">File Upload</string>
    <string name="tctk">Tên chủ tài khoản</string>
    <string name="nt">Nhập tên</string>
    <string name="sdt">Số điện thoại</string>
    <string name="nsdt">Nhập số điện thoại</string>
    <string name="stknh">Số tài khoản ngân hàng</string>
    <string name="nstknh">Nhập số tài khoản ngân hàng</string>
    <string name="tctknh">Tên chủ tài khoản ngân hàng</string>
    <string name="ntctk">Nhập tên chủ tài khoản</string>
    <string name="tkpt">Tìm kiếm phòng trọ</string>
    <string name="kttnd">Không tìm thấy nội dung</string>
    <string name="text_ten">Nguyen Hong Phuc</string>
    <string name="text_sdt">0797517712</string>
    <string name="xt">Xác thực</string>
    <string name="dx">Đăng xuất</string>
    <string name="hs">Hồ Sơ</string>
    <string name="ctp">Chi tiết phòng</string>
    <string name="pccha">Phòng chưa có hình ảnh</string>
    <string name="lp">Loại phòng</string>
    <string name="gt">Giới tính</string>
    <string name="sltd">Số lượng tối đa</string>
    <string name="dt">Diện tích</string>
    <string name="text_dien_tich">50 ㎡</string>
    <string name="text_sltd">10</string>
    <string name="text_tien_coc">1 Tháng</string>
    <string name="text_tien_dien">3.5K</string>
    <string name="text_tien_nuoc">100K</string>
    <string name="text_free_wf">Free</string>
    <string name="tc">Tiền cọc</string>
    <string name="gia">Giá:</string>
    <string name="ct">Chi tiết</string>
    <string name="dc">Địa chỉ</string>
    <string name="ti">Tiện ích</string>
    <string name="ccti">Chưa có tiện ích</string>
    <string name="xthem">Xem thêm</string>
    <string name="dsnt">Danh sách người thuê</string>
    <string name="ctbqt">Có thể bạn quan tâm</string>
    <string name="dcct">188/1 Nguyễn Văn Hưởng , Phường Thảo Điền, Quận 2, Hồ Chí Minh</string>
    <string name="dp">Đặt phòng</string>
    <string name="dsp">Danh sách phòng</string>
    <string name="channel_name">NOTIFICATION 3T</string>
    <string name="channel_description">DESCRIPTION 3T</string>
    <string name="msg_token_fmt">lỗi token</string>
    <string name="text1">Vui lòng chọn yêu cầu, sau đó bấm áp dụng để tìm kiếm</string>
    <string name="error_unable_to_call_api">Error unable to call api</string>
    <string name="dsq">Danh sách quận</string>
    <string name="sn">Số người</string>
    <string name="tcgt">Tất cả</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="_5">5</string>
    <string name="_100">100</string>
    <string name="vnd">VND</string>
    <string name="gi">Giá</string>
    <string name="dn">Điện - Nước</string>
    <string name="cxn">Đang chờ xác nhận</string>
    <array name="rangeSlide">
        <item>0</item>
        <item>15</item>
    </array>
</resources>