<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back"
            style="@style/imgView_back" />

        <TextView
            style="@style/tv_toolbar"
            android:text="@string/stt" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgView_profile_nguoi_thue"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avt"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/tv_upload"
            style="@style/tv_18sp"
            android:layout_below="@+id/imgView_profile_nguoi_thue"
            android:layout_centerHorizontal="true"
            android:text="@string/ful" />

        <TextView
            android:id="@+id/tv_lb_ten"
            style="@style/tv_16sp"
            android:layout_below="@id/tv_upload"
            android:text="@string/tctk" />

        <EditText
            android:id="@+id/edt_name_nguoi_thue"
            style="@style/edt1"
            android:layout_below="@+id/tv_lb_ten"
            android:hint="@string/nt" />

        <TextView
            android:id="@+id/tv_lb_phone"
            style="@style/tv_16sp"
            android:layout_below="@id/edt_name_nguoi_thue"
            android:text="@string/sdt" />

        <EditText
            android:id="@+id/edt_phone_nguoi_thue"
            style="@style/edt1"
            android:layout_below="@+id/tv_lb_phone"
            android:background="@color/white"
            android:hint="@string/nsdt" />

        <TextView
            android:id="@+id/tv_lb_stk_bank"
            style="@style/tv_16sp"
            android:layout_below="@id/edt_phone_nguoi_thue"
            android:text="@string/stknh" />

        <EditText
            android:id="@+id/edt_number_bank_nguoi_thue"
            style="@style/edt1"
            android:layout_below="@+id/tv_lb_stk_bank"
            android:hint="@string/nstknh" />

        <TextView
            android:id="@+id/tv_lb_name_bank"
            style="@style/tv_16sp"
            android:layout_below="@id/edt_number_bank_nguoi_thue"
            android:text="@string/tctknh" />

        <EditText
            android:id="@+id/edt_name_user_bank_nguoi_thue"
            style="@style/edt1"
            android:layout_below="@+id/tv_lb_name_bank"
            android:hint="@string/ntctk" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accept_edit_profile_nguoi_thue"
            style="@style/btn1"
            android:layout_below="@+id/edt_name_user_bank_nguoi_thue"
            android:layout_marginTop="30dp"
            android:background="@color/button_fb"
            android:text="@string/cntt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/btn1"
            android:layout_below="@+id/btn_accept_edit_profile_nguoi_thue"
            android:layout_marginTop="5dp"
            android:text="@string/huy"
            android:textColor="@color/black"
            android:background="@color/white"/>
    </RelativeLayout>


</LinearLayout>