<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back_nguoi_thue"
            style="@style/imgView_back" />

        <TextView
            style="@style/tv_toolbar"
            android:text="@string/dmk" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edt_pass_now_nguoi_thue"
            style="@style/edt1"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/iconp_lock"
            android:drawablePadding="10dp"
            android:hint="@string/mkht"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edt_pass_new_nguoi_thue"
            style="@style/edt1"
            android:layout_below="@+id/edt_pass_now_nguoi_thue"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/iconp_key"
            android:drawablePadding="10dp"
            android:hint="@string/mkm"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edt_pass_confrim_nguoi_thue"
            style="@style/edt1"
            android:layout_below="@+id/edt_pass_new_nguoi_thue"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/iconp_key"
            android:drawablePadding="10dp"
            android:hint="@string/nlmk"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btn_accept_change_pass_nguoi_thue"
            style="@style/btn1"
            android:layout_below="@+id/edt_pass_confrim_nguoi_thue"
            android:layout_marginTop="30dp"
            android:background="@color/button_fb"
            android:text="@string/cntt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_nguoi_thue"
            style="@style/btn1"
            android:layout_below="@+id/btn_accept_change_pass_nguoi_thue"
            android:layout_marginTop="5dp"
            android:text="@string/huy"
            android:textColor="@color/black" />


    </RelativeLayout>


</LinearLayout>