<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/tv_toolbar"
            android:text="@string/hs" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:padding="10dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgView_profile_nguoi_thue"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avt"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/tv_name_nguoi_thue"
            style="@style/tv_18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/imgView_profile_nguoi_thue"
            android:text="@string/text_ten"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_phone_nguoi_thue"
            style="@style/tv_16sp"
            android:layout_below="@+id/tv_name_nguoi_thue"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/imgView_profile_nguoi_thue"
            android:text="@string/text_sdt"
            android:textSize="18sp" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Edit_Profile_nguoi_thue"
        style="@style/btn2"
        android:drawableRight="@drawable/iconp_edit_profile"
        android:text="@string/stt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Change_Password_nguoi_thue"
        style="@style/btn2"
        android:drawableRight="@drawable/iconp_changepassword"
        android:text="@string/dmk" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Logout_nguoi_thue"
        style="@style/btn2"
        android:drawableRight="@drawable/iconp_logout"
        android:text="@string/dx" />


</LinearLayout>