<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.chutro.DetailPhongTroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/img_back_detail"
                    style="@style/imgView_back" />

                <TextView
                    style="@style/tv_toolbar"
                    android:text="@string/ctp" />

            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llListHinhAnh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_hinh_anh_rong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/pccha"
                android:textColor="@color/black"
                android:textSize="@dimen/size_20sp"
                android:visibility="gone" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_2"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:visibility="visible" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_detail_loai_phong"
                    style="@style/tv_16sp_2"
                    android:drawableRight="@drawable/iconp_star"
                    android:drawablePadding="2dp"
                    android:text="@string/lp" />

                <TextView
                    android:id="@+id/tv_detail_gio_tinh"
                    style="@style/tv_16sp_2"
                    android:layout_marginStart="5dp"
                    android:drawableRight="@drawable/iconp_star"
                    android:drawablePadding="2dp"
                    android:text="@string/gt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ký túc xá quận"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_25sp" />

                    <TextView
                        android:id="@+id/tv_detail_quan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="Thủ Đức"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tv_20sp"
                        android:padding="5dp"
                        android:text="@string/gia" />

                    <TextView
                        android:id="@+id/tv_detail_gia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="1.5 triệu VND/người"
                        android:textColor="@color/main_color_app_light"
                        android:textSize="@dimen/size_20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tv_16sp_2"
                        android:text="@string/sltd" />

                    <TextView
                        android:id="@+id/tv_detail_so_luong_toi_da"
                        style="@style/tv_16sp_2"
                        android:text="@string/text_sltd"
                        android:textColor="@color/main_color_app_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tv_16sp_2"
                        android:text="@string/dt" />

                    <TextView
                        android:id="@+id/tv_detail_dien_tich"
                        style="@style/tv_16sp_2"
                        android:text="@string/text_dien_tich"
                        android:textColor="@color/main_color_app_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tv_16sp_2"
                        android:text="@string/tc" />

                    <TextView
                        android:id="@+id/tv_detail_tien_coc"
                        style="@style/tv_16sp_2"
                        android:text="@string/text_tien_coc"
                        android:textColor="@color/main_color_app_light" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout style="@style/ll_gray_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/iconp_flash" />

                    <TextView
                        android:id="@+id/tv_detail_tien_dien"
                        style="@style/tv_16sp_2"
                        android:text="@string/text_tien_dien"
                        android:textColor="@color/main_color_app_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/iconp_water" />

                    <TextView
                        android:id="@+id/tv_detail_tien_nuoc"
                        style="@style/tv_16sp_2"
                        android:text="@string/text_tien_nuoc"
                        android:textColor="@color/main_color_app_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/iconp_wifi" />

                    <TextView
                        android:id="@+id/tv_detail_wifi"
                        style="@style/tv_16sp_2"
                        android:text="@string/text_free_wf"
                        android:textColor="@color/main_color_app_light" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout style="@style/ll_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/tv_20sp"
                    android:text="@string/ct" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/iconp_info" />

                    <com.borjabravo.readmoretextview.ReadMoreTextView
                        android:id="@+id/tv_detail_mo_ta"
                        style="@style/tv_16sp_2"
                        android:paddingStart="5dp"
                        android:text="@string/test_mo_ta"
                        app:colorClickableText="#039BE5"
                        app:trimCollapsedText="@string/xem_them"
                        app:trimExpandedText="@string/thu_gon"
                        app:trimLength="100"
                        app:trimMode="trimModeLength" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout style="@style/ll_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/tv_20sp"
                    android:text="@string/dc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/iconp_gps" />

                    <TextView
                        android:id="@+id/tv_detail_dia_chi"
                        style="@style/tv_16sp_2"
                        android:text="@string/test_dia_chi" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout style="@style/ll_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/lb_tien_ich"
                    style="@style/tv_20sp"
                    android:text="@string/ti" />

                <TextView
                    android:id="@+id/tv_tien_ich_rong"
                    style="@style/tv_16sp_2"
                    android:layout_below="@+id/lb_tien_ich"
                    android:layout_centerHorizontal="true"
                    android:text="@string/ccti"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_list_tien_ich"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_tien_ich_rong"
                    android:padding="10dp" />


                <RelativeLayout
                    android:id="@id/ll_gray_2"
                    style="@style/ll_gray_2"
                    android:layout_below="@+id/rcv_list_tien_ich" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@+id/ll_gray_2"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_xem_them"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/tv_20sp"
                            android:layout_below="@+id/rcv_list_tien_ich"
                            android:gravity="center"
                            android:text="@string/xthem"
                            android:textColor="@color/up_down"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginStart="2dp"
                            android:src="@drawable/iconp_down" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_thu_gon"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_below="@+id/ll_gray_2"
                        android:gravity="center|center_horizontal"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/rcv_list_tien_ich"
                            android:gravity="center"
                            android:text="Thu gọn"
                            android:textColor="@color/up_down"
                            android:textSize="@dimen/size_20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginStart="2dp"
                            android:src="@drawable/iconp_up" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>